--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^4.1.1",
     "router": "^2.0.0",
+    "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
