--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.2.4",
     "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^4.1.1",
