--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "sockjs-client": "^1.6.1",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
