--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.2.4",
     "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^4.1.1",
     "router": "^2.0.0",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
