--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "ci": "^2.3.0",
+    "cross-spawn": "^7.0.6",
     "js-cookie": "^3.0.5",
     "pinia": "^2.2.4",
     "pinia-plugin-persist": "^1.0.0",
