--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ci": "^2.3.0",
     "cross-spawn": "^7.0.6",
     "js-cookie": "^3.0.5",
+    "mitt": "^3.0.1",
     "pinia": "^2.2.4",
     "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^4.1.3",
